--- a/Home/index.html
+++ b/Home/index.html
@@ -7,9 +7,107 @@
 		<title>Future Estate</title>
 		<link rel="stylesheet" href="styles.css" />
 	</head>
-	<body>
-		<header-component></header-component>
-		<div class="container"></div>
+	<b>
+			<header-component></header-component>
+			<div class="container">
+				<div class="hero">
+					<div class="hero-content">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						<span>Voluptatem minima accusamus perspiciatis.</span>
+					</div>
+					<div class="hero-image"></div>
+				</div>
+				<div class="selling-point">
+					<div class="selling-point-title">
+						<p>WHAT WE DO</p>
+						<h1>OUR MAIN FOCUS</h1>
+					</div>
+					<div class="selling-point-card-container">
+						<div class="selling-point-card">
+							<img src="" alt="" />
+							<div class="sp-header">
+								<h1>Buy a Home</h1>
+								<p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
+									ipsum dolor, sit amet consectetur adipisicing elit.
+								</p>
+							</div>
+							<button>MORE</button>
+						</div>
+						<div class="selling-point-card">
+							<img src="" alt="" />
+							<div class="sp-header">
+								<h1>Rent a Home</h1>
+								<p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
+									ipsum dolor, sit amet consectetur adipisicing elit.
+								</p>
+							</div>
+							<button>MORE</button>
+						</div>
+						<div class="selling-point-card">
+							<img src="" alt="" />
+							<div class="sp-header">
+								<h1>Sell a Home</h1>
+								<p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
+									ipsum dolor, sit amet consectetur adipisicing elit.
+								</p>
+							</div>
+							<button>MORE</button>
+						</div>
+					</div>
+				</div>
+				<div class="property">
+					<div class="property-title">
+						<p>OUR PROPERTY</p>
+						<h1>LATEST PROPERTY</h1>
+					</div>
+					<div class="property-card-container">
+						<div class="property-card">
+							<div class="property-image">
+								<img src="" alt="" />
+								<div class="model">FOR SALE</div>
+							</div>
+							<div class="property-content">
+								<div class="p-detail">
+									<p class="p-type"></p>
+									<p class="p-price"></p>
+								</div>
+								<div class="p-location">
+									<img src="" alt="" />
+									<p>Bahan, Myanmar</p>
+								</div>
+								<div class="p-rooms">
+									<div class="p-bathroom">
+										<img src="" alt="" />
+										<p>2</p>
+									</div>
+									<div class="p-bedroom">
+										<img src="" alt="" />
+										<p>4</p>
+									</div>
+									<div class="p-sf">
+										<img src="" alt="" />
+										<p>1400sqft</p>
+									</div>
+								</div>
+								<div class="divider"></div>
+								<div class="p-owner">
+									<div class="owner-detail">
+										<img src="" alt="" />
+										<p></p>
+									</div>
+									<div class="feedback-icon">
+										<img src="" alt="" />
+										<img src="" alt="" />
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		<script src="../components/index.js" type="module"></script>
 	</body>
 </html>
