--- a/Home/index.html
+++ b/Home/index.html
@@ -28,8 +28,8 @@
 						<div class="sp-header">
 							<h1>Buy a Home</h1>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
-								ipsum dolor, sit amet consectetur adipisicing elit.
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum
+								dolor, sit amet consectetur adipisicing elit.
 							</p>
 						</div>
 						<button>MORE</button>
@@ -39,8 +39,8 @@
 						<div class="sp-header">
 							<h1>Rent a Home</h1>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
-								ipsum dolor, sit amet consectetur adipisicing elit.
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum
+								dolor, sit amet consectetur adipisicing elit.
 							</p>
 						</div>
 						<button>MORE</button>
@@ -50,8 +50,8 @@
 						<div class="sp-header">
 							<h1>Sell a Home</h1>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
-								ipsum dolor, sit amet consectetur adipisicing elit.
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum
+								dolor, sit amet consectetur adipisicing elit.
 							</p>
 						</div>
 						<button>MORE</button>
@@ -71,8 +71,8 @@
 						</div>
 						<div class="property-content">
 							<div class="p-detail">
-								<p class="p-type"></p>
-								<p class="p-price"></p>
+								<p class="p-type">Duplex Apartment</p>
+								<p class="p-price">$600,000</p>
 							</div>
 							<div class="p-location">
 								<img src="" alt="" />
