finishing property card

--- a/Home/index.html
+++ b/Home/index.html
@@ -70,37 +70,39 @@
 							<div class="model">FOR SALE</div>
 						</div>
 						<div class="property-content">
-							<div class="p-detail">
-								<p class="p-type">Duplex Apartment</p>
-								<p class="p-price">$600,000</p>
-							</div>
-							<div class="p-location">
-								<img src="" alt="" />
-								<p>Bahan, Myanmar</p>
-							</div>
-							<div class="p-rooms">
-								<div class="p-bathroom">
-									<img src="" alt="" />
-									<p>2</p>
+							<div style="padding: 20px">
+								<div class="p-detail">
+									<p class="p-type">Duplex Apartment</p>
+									<p class="p-price">$600,000</p>
 								</div>
-								<div class="p-bedroom">
-									<img src="" alt="" />
-									<p>4</p>
+								<div class="p-location">
+									<img src="../assets/icons/location.png" alt="" />
+									<p>Bahan, Myanmar</p>
 								</div>
-								<div class="p-sf">
-									<img src="" alt="" />
-									<p>1400sqft</p>
+								<div class="p-rooms">
+									<div class="p-bathroom">
+										<img src="../assets/icons/bathroom.png" alt="" />
+										<p>2</p>
+									</div>
+									<div class="p-bedroom">
+										<img src="../assets/icons/bedroom.png" alt="" />
+										<p>4</p>
+									</div>
+									<div class="p-sf">
+										<img src="../assets/icons/area.png" alt="" />
+										<p>1400sqft</p>
+									</div>
 								</div>
-							</div>
-							<div class="divider"></div>
-							<div class="p-owner">
-								<div class="owner-detail">
-									<img src="" alt="" />
-									<p></p>
-								</div>
-								<div class="feedback-icon">
-									<img src="" alt="" />
-									<img src="" alt="" />
+								<div class="divider"></div>
+								<div class="p-owner">
+									<div class="owner-detail">
+										<img src="" alt="" />
+										<p>Mommy Sage</p>
+									</div>
+									<div class="feedback-icon">
+										<img src="../assets/icons/heart-blue.png" alt="" />
+										<img src="../assets/icons/share.png" alt="" />
+									</div>
 								</div>
 							</div>
 						</div>
