remade custom property-card component

--- a/Home/index.html
+++ b/Home/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon" />
 		<title>Future Estate</title>
 		<link rel="stylesheet" href="styles.css" />
 	</head>
@@ -24,7 +25,9 @@
 				</div>
 				<div class="selling-point-card-container">
 					<div class="selling-point-card">
-						<img src="" alt="" />
+						<div class="sp-img-container">
+							<img src="../assets/icons/home.png" alt="" />
+						</div>
 						<div class="sp-header">
 							<h1>Buy a Home</h1>
 							<p>
@@ -32,10 +35,13 @@
 								dolor, sit amet consectetur adipisicing elit.
 							</p>
 						</div>
-						<button>MORE</button>
+						<a>MORE</a>
 					</div>
 					<div class="selling-point-card">
-						<img src="" alt="" />
+						<div class="sp-img-container">
+							<img src="../assets/icons/home.png" alt="" />
+						</div>
+
 						<div class="sp-header">
 							<h1>Rent a Home</h1>
 							<p>
@@ -43,10 +49,12 @@
 								dolor, sit amet consectetur adipisicing elit.
 							</p>
 						</div>
-						<button>MORE</button>
+						<a>MORE</a>
 					</div>
 					<div class="selling-point-card">
-						<img src="" alt="" />
+						<div class="sp-img-container">
+							<img src="../assets/icons/home.png" alt="" />
+						</div>
 						<div class="sp-header">
 							<h1>Sell a Home</h1>
 							<p>
@@ -54,7 +62,7 @@
 								dolor, sit amet consectetur adipisicing elit.
 							</p>
 						</div>
-						<button>MORE</button>
+						<a>MORE</a>
 					</div>
 				</div>
 			</div>
@@ -64,49 +72,16 @@
 					<h1>LATEST PROPERTY</h1>
 				</div>
 				<div class="property-card-container">
-					<div class="property-card">
-						<div class="property-image">
-							<img src="" alt="" />
-							<div class="model">FOR SALE</div>
-						</div>
-						<div class="property-content">
-							<div style="padding: 20px">
-								<div class="p-detail">
-									<p class="p-type">Duplex Apartment</p>
-									<p class="p-price">$600,000</p>
-								</div>
-								<div class="p-location">
-									<img src="../assets/icons/location.png" alt="" />
-									<p>Bahan, Myanmar</p>
-								</div>
-								<div class="p-rooms">
-									<div class="p-bathroom">
-										<img src="../assets/icons/bathroom.png" alt="" />
-										<p>2</p>
-									</div>
-									<div class="p-bedroom">
-										<img src="../assets/icons/bedroom.png" alt="" />
-										<p>4</p>
-									</div>
-									<div class="p-sf">
-										<img src="../assets/icons/area.png" alt="" />
-										<p>1400sqft</p>
-									</div>
-								</div>
-								<div class="divider"></div>
-								<div class="p-owner">
-									<div class="owner-detail">
-										<img src="" alt="" />
-										<p>Mommy Sage</p>
-									</div>
-									<div class="feedback-icon">
-										<img src="../assets/icons/heart-blue.png" alt="" />
-										<img src="../assets/icons/share.png" alt="" />
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+					<property-card
+						type="Duplex Apartment"
+						price="$600,000"
+						location="Bahan, Yangon"
+						bathroom="3"
+						bedroom="4"
+						area="1400sqft"
+						owner="John Snow"></property-card>
+					<property-card></property-card>
+					<property-card></property-card>
 				</div>
 			</div>
 		</div>
