footer, scroll reveal

--- a/Home/index.html
+++ b/Home/index.html
@@ -16,7 +16,7 @@
 					Lorem ipsum dolor sit amet consectetur adipisicing elit.
 					<span>Voluptatem minima accusamus perspiciatis.</span>
 				</div>
-				<div class="hero-image"></div>
+				<img src="../assets/images/hero-image.png" class="hero-image"></img>
 			</div>
 			<div class="selling-point">
 				<div class="selling-point-title">
@@ -79,13 +79,16 @@
 						bathroom="3"
 						bedroom="4"
 						area="1400sqft"
-						owner="John Snow"></property-card>
-					<property-card></property-card>
-					<property-card></property-card>
+						owner="John Snow" class="property-card"></property-card>
+					<property-card class="property-card"></property-card>
+					<property-card class="property-card"></property-card>
 				</div>
 			</div>
 		</div>
+		<footer-component></footer-component>
 
+		<script src="../assets/scripts/scrollreveal.js"></script>
 		<script src="../components/index.js" type="module"></script>
+		<script src="index.js"></script>
 	</body>
 </html>
