--- a/Home/index.html
+++ b/Home/index.html
@@ -4,7 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon" />
+		<link
+			rel="shortcut icon"
+			href="../assets/favicon.ico"
+			type="image/x-icon"
+		/>
 		<title>Future Estate</title>
 		<link rel="stylesheet" href="styles.css" />
 	</head>
@@ -31,8 +35,8 @@
 						<div class="sp-header">
 							<h1>Buy a Home</h1>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum
-								dolor, sit amet consectetur adipisicing elit.
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
+								ipsum dolor, sit amet consectetur adipisicing elit.
 							</p>
 						</div>
 						<a>MORE</a>
@@ -45,8 +49,8 @@
 						<div class="sp-header">
 							<h1>Rent a Home</h1>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum
-								dolor, sit amet consectetur adipisicing elit.
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
+								ipsum dolor, sit amet consectetur adipisicing elit.
 							</p>
 						</div>
 						<a>MORE</a>
@@ -58,8 +62,8 @@
 						<div class="sp-header">
 							<h1>Sell a Home</h1>
 							<p>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum
-								dolor, sit amet consectetur adipisicing elit.
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem
+								ipsum dolor, sit amet consectetur adipisicing elit.
 							</p>
 						</div>
 						<a>MORE</a>
@@ -79,8 +83,17 @@
 						bathroom="3"
 						bedroom="4"
 						area="1400sqft"
-						owner="John Snow"></property-card>
-					<property-card></property-card>
+						owner="John Snow"
+					></property-card>
+					<property-card
+						type="Duplex Apartment"
+						price="$690,000"
+						location="Bahan, Yangon"
+						bathroom="2"
+						bedroom="6"
+						area="1400sqft"
+						owner="Snow"
+					></property-card>
 					<property-card></property-card>
 				</div>
 			</div>
