--- a/Home/index.html
+++ b/Home/index.html
@@ -84,6 +84,10 @@
 					<property-card class="property-card"></property-card>
 				</div>
 			</div>
+
+			<div class="latest">
+				
+			</div>
 		</div>
 		<footer-component></footer-component>
 
